@@ -31,5 +31,10 @@ override_dh_quilt_unpatch:
 	dh_quilt_unpatch
 	touch rules/base.o_k.part
 
+override_dh_clean:
+	dh_clean
+	rm -f po/*.gmo po/*.pot rules/evdev*.xml
+	rm -rf m4
+
 %:
 	dh $@ --with quilt --builddirectory=build/
