@@ -1,8 +1,12 @@
 xkeyboard-config (2.29-2) UNRELEASED; urgency=medium
 
+  [ Simon McVittie ]
   * Add Breaks on x11-xkb-utils (<< 7.7+5).
     This ensures that xkbcomp won't fail for keycodes above 255, which this
     package now uses (Closes: #952731)
+
+  [ Timo Aaltonen ]
+  * rules: Override dh_clean.
 
  -- Simon McVittie <smcv@debian.org>  Sat, 29 Feb 2020 10:44:05 +0000
 
